--- a/Tool/index.html
+++ b/Tool/index.html
@@ -77,23 +77,23 @@
                 $('#pixeln_wrap').find('.led').remove();
                 for(var h = 0; h < hoehe; h ++){
                     for(var b = 0; b < breite; b ++){
-                        $('#pixeln_wrap').append('<div id='+h + '-'+ b +' class="led" ></div>');
+											  // erstellt die einzelnen divs mit id=breite-hoehe
+                        $('#pixeln_wrap').append('<div id='+b+'-'+h+' class="led"></div>');
                     };
                     
                 };
-                console.log(breite);
             });
-            
-        $('.led').on('click', function(){
-//            if($(this).css('background-color','white')){
-//              $(this).css('background-color', 'black');  
-//            };
-
-            console.log('test');
-        });
-
-
-    });
+      // Function to change color of each DIV      
+			$(Document).on('click', '.led', function(){
+				if($(this).css('background-color','white')){
+					$(this).css('background-color','black');
+					console.log('black');
+				}else {
+					$(this).css('background-color','white');  
+					console.log('white');
+				};
+			});
+		});
 
 </script>
 
