--- a/Tool/index.html
+++ b/Tool/index.html
@@ -84,7 +84,7 @@
                 };
             });
       // Function to change color of each DIV      
-			$(Document).on('click', '.led', function(){
+			$(document).on('click', '.led', function(){
 				if($(this).css('background-color','white')){
 					$(this).css('background-color','black');
 					console.log('black');
