breite höhe in Funktion hinzugefügt

--- a/Tool/index.html
+++ b/Tool/index.html
@@ -99,6 +99,8 @@
 		}else {
 			$(this).css('background-color','rgb(255, 255, 255)');
 		};
+		breite = $('#breite_create').val();
+		hoehe  = $('#hoehe_create').val();
 		createCode(breite, hoehe);
 	}); // end click createMatrix
 	
