--- a/Tool/index.html
+++ b/Tool/index.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery-ui.min.css">
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery-ui.min.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" href="img/favicon.ico" />
+
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
